--- a/packages/components/error-summary/_error-summary.scss
+++ b/packages/components/error-summary/_error-summary.scss
@@ -1,10 +1,20 @@
+/* ==========================================================================
+   COMPONENTS/ #ERROR-SUMMARY
+   ========================================================================== */
+
+/**
+ * 1. Cross-component class - adjusts styling of list component.
+ * 2. Override default link styling to use error colour
+ * 3. When focussed, the text colour needs to be darker to ensure that colour
+ *    contrast is still acceptable
+ */
+
 .nhsuk-error-summary {
   @include nhsuk-responsive-padding(4);
-  @include nhsuk-responsive-margin(8, "bottom");
+  @include nhsuk-responsive-margin(8, 'bottom');
   @include nhsuk-focusable;
 
   border: $govuk-border-width-mobile solid $nhsuk-error-color;
-  color: $nhsuk-text-color; // TODO: Do we need this?
 
   @include govuk-media-query($from: tablet) {
     border: $govuk-border-width solid $nhsuk-error-color;
@@ -15,7 +25,7 @@
   @include nhsuk-font(24, $weight: bold);
 
   margin-top: 0;
-  @include nhsuk-responsive-margin(4, "bottom");
+  @include nhsuk-responsive-margin(4, 'bottom');
 }
 
 .nhsuk-error-summary__body {
@@ -23,21 +33,20 @@
 
   p {
     margin-top: 0;
-    @include nhsuk-responsive-margin(4, "bottom");
+    @include nhsuk-responsive-margin(4, 'bottom');
   }
 }
 
-// Cross-component class - adjusts styling of list component
-.nhsuk-error-summary__list {
-  margin-top: 0;
+.nhsuk-error-summary__list { /* 1 */
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 .nhsuk-error-summary__list a {
   @include nhsuk-focusable-fill;
   @include nhsuk-typography-weight-bold;
 
-  // Override default link styling to use error colour
+  /* 2 */
   &:link,
   &:visited,
   &:hover,
@@ -45,9 +54,8 @@
     color: $nhsuk-error-color;
   }
 
-  // When focussed, the text colour needs to be darker to ensure that colour
-  // contrast is still acceptable
-  &:focus {
+  &:focus { /* 3 */
     color: $nhsuk-link-focus-color;
   }
+
 }
