--- a/packages/components/header/_header.scss
+++ b/packages/components/header/_header.scss
@@ -665,7 +665,7 @@
   .nhsuk-header__search-toggle,
   .nhsuk-search__close,
   .nhsuk-header__navigation-title,
-  .nhsuk-header__navigation-link .nhsuk-icon__chevron-right { // sass-lint:disable-line force-element-nesting
+  .nhsuk-header__navigation-link .nhsuk-icon__chevron-right {
     display: none;
   }
 
