--- a/docs/pages/examples.njk
+++ b/docs/pages/examples.njk
@@ -68,6 +68,9 @@
     <li><a href="../components/input/error.html">Input with error message</a></li>
     <li><a href="../components/input/custom-width.html">Input with width modifier</a></li>
     <li><a href="../components/inset-text.html">Inset text</a></li>
+    <li><a href="../components/label/index.html">Label</a></li>
+    <li><a href="../components/label/bold.html">Label with bold text</a></li>
+    <li><a href="../components/label/page-heading.html">Label as page heading</a></li>
     <li><a href="../components/list-panel.html">List panel</a></li>
     <li><a href="../components/nav-a-z.html">Nav A-Z</a></li>
     <li><a href="../components/pagination.html">Pagination</a></li>
