--- a/packages/components/checkboxes/_checkboxes.scss
+++ b/packages/components/checkboxes/_checkboxes.scss
@@ -1,18 +1,24 @@
+/* ==========================================================================
+   COMPONENTS/ #CHECKBOXES
+   ========================================================================== */
+
+/**
+ * 1. remove 300ms pause on mobile.
+ * 2. Fix bug in IE11 caused by transform rotate (-45deg).
+ */
+
 $govuk-checkboxes-size: nhsuk-spacing(6);
 $govuk-checkboxes-label-padding-left-right: nhsuk-spacing(3);
 
 .nhsuk-checkboxes__item {
   @include nhsuk-font(19);
 
-  display: block;
-  position: relative;
-
-  min-height: $govuk-checkboxes-size;
-
-  margin-bottom: nhsuk-spacing(2);
-  padding: 0 0 0 $govuk-checkboxes-size;
-
   clear: left;
+  display: block;
+  margin-bottom: nhsuk-spacing(2);
+  min-height: $govuk-checkboxes-size;
+  padding: 0 0 0 $govuk-checkboxes-size;
+  position: relative;
 }
 
 .nhsuk-checkboxes__item:last-child,
@@ -21,90 +27,83 @@ $govuk-checkboxes-label-padding-left-right: nhsuk-spacing(3);
 }
 
 .nhsuk-checkboxes__input {
-  position: absolute;
-
-  z-index: 1;
-  top: 0;
-  left: 0;
-
-  width: $govuk-checkboxes-size;
-  height: $govuk-checkboxes-size;
-
   cursor: pointer;
-
+  height: $govuk-checkboxes-size;
+  left: 0;
   margin: 0;
   opacity: 0;
+  position: absolute;
+  top: 0;
+  width: $govuk-checkboxes-size;
+  z-index: 1;
 }
 
 .nhsuk-checkboxes__label {
+  -ms-touch-action: manipulation; /* 1 */
+  cursor: pointer;
   display: inline-block;
   margin-bottom: 0;
   padding: 8px $govuk-checkboxes-label-padding-left-right nhsuk-spacing(1);
-  cursor: pointer;
-  // remove 300ms pause on mobile
-  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 
 .nhsuk-checkboxes__hint {
   display: block;
-  padding-right: $govuk-checkboxes-label-padding-left-right;
   padding-left: $govuk-checkboxes-label-padding-left-right;
+  padding-right: $govuk-checkboxes-label-padding-left-right;
 }
 
 .nhsuk-checkboxes__input + .nhsuk-checkboxes__label::before {
-  content: "";
+  background: transparent;
+  border: $govuk-border-width-form-element solid $color_nhsuk-black;
   box-sizing: border-box;
+  content: '';
+  height: $govuk-checkboxes-size;
+  left: 0;
   position: absolute;
   top: 0;
-  left: 0;
   width: $govuk-checkboxes-size;
-  height: $govuk-checkboxes-size;
-  border: $govuk-border-width-form-element solid $color_nhsuk-black;
-  background: transparent;
 }
 
 .nhsuk-checkboxes__input + .nhsuk-checkboxes__label::after {
-  content: "";
-
+  -ms-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  background: transparent;
+  border: solid;
+  border-top-color: transparent;
+  border-width: 0 0 $govuk-border-width $govuk-border-width;
+  content: '';
+  height: 10px;
+  left: 10px;
+  opacity: 0; /* 2 */
   position: absolute;
   top: 13px;
-  left: 10px;
+  transform: rotate(-45deg);
   width: 22px;
-  height: 10px;
-
-  -webkit-transform: rotate(-45deg);
-
-      -ms-transform: rotate(-45deg);
-
-          transform: rotate(-45deg);
-  border: solid;
-  border-width: 0 0 $govuk-border-width $govuk-border-width;
-  // Fix bug in IE11 caused by transform rotate (-45deg).
-  // See: alphagov/govuk_elements/issues/518
-  border-top-color: transparent;
-
-  opacity: 0;
-
-  background: transparent;
 }
 
-// Focused state
+/*
+ * Focus state
+ *
+ * 1. Since box-shadows are removed when users customise their colours
+ *    We set a transparent outline that is shown instead.
+ *    https://accessibility.blog.gov.uk/2017/03/27/how-users-change-colours-on-websites/
+ */
+
 .nhsuk-checkboxes__input:focus + .nhsuk-checkboxes__label::before {
-  // Since box-shadows are removed when users customise their colours
-  // We set a transparent outline that is shown instead.
-  // https://accessibility.blog.gov.uk/2017/03/27/how-users-change-colours-on-websites/
-  outline: $govuk-focus-width solid transparent;
-  outline-offset: $govuk-focus-width;
   box-shadow: 0 0 0 $govuk-focus-width $nhsuk-focus-color;
+  outline: $govuk-focus-width solid transparent; /* 1 */
+  outline-offset: $govuk-focus-width;
 }
 
-// Selected state
+/* Selected state */
+
 .nhsuk-checkboxes__input:checked + .nhsuk-checkboxes__label::after {
   opacity: 1;
 }
 
-// Disabled state
+/* Disabled state */
+
 .nhsuk-checkboxes__input:disabled,
 .nhsuk-checkboxes__input:disabled + .nhsuk-checkboxes__label {
   cursor: default;
@@ -114,19 +113,25 @@ $govuk-checkboxes-label-padding-left-right: nhsuk-spacing(3);
   opacity: .5;
 }
 
+/*
+ * Conditional
+ *
+ * 1. Calculate the amount of padding needed to keep the border
+ *    centered against the checkbox.
+ * 2. Move the border centered with the checkbox.
+ * 3. Move the contents of the conditional inline with the label.
+ */
+
 $conditional-border-width: $govuk-border-width-mobile;
-// Calculate the amount of padding needed to keep the border centered against the checkbox.
-$conditional-border-padding: ($govuk-checkboxes-size / 2) - ($conditional-border-width / 2);
-// Move the border centered with the checkbox
-$conditional-margin-left: $conditional-border-padding;
-// Move the contents of the conditional inline with the label
-$conditional-padding-left: $conditional-border-padding + $govuk-checkboxes-label-padding-left-right;
+$conditional-border-padding: ($govuk-checkboxes-size / 2) - ($conditional-border-width / 2); /* 1 */
+$conditional-margin-left: $conditional-border-padding; /* 2 */
+$conditional-padding-left: $conditional-border-padding + $govuk-checkboxes-label-padding-left-right; /* 3 */
 
 .nhsuk-checkboxes__conditional {
-  @include nhsuk-responsive-margin(4, "bottom");
+  @include nhsuk-responsive-margin(4, 'bottom');
+  border-left: $conditional-border-width solid $color_nhsuk-black;
   margin-left: $conditional-margin-left;
   padding-left: $conditional-padding-left;
-  border-left: $conditional-border-width solid $color_nhsuk-black;
 
   .js-enabled &--hidden {
     display: none;
