--- a/packages/components/date-input/_date-input.scss
+++ b/packages/components/date-input/_date-input.scss
@@ -1,13 +1,21 @@
+/* ==========================================================================
+   COMPONENTS/ #DATE-INPUT
+   ========================================================================== */
+
+/**
+ * 1. font-size: 0 removes whitespace caused by inline-block
+ */
+
 .nhsuk-date-input {
   @include clearfix;
-  // font-size: 0 removes whitespace caused by inline-block
-  font-size: 0;
+
+  font-size: 0; /* 1 */
 }
 
 .nhsuk-date-input__item {
   display: inline-block;
-  margin-right: nhsuk-spacing(4);
   margin-bottom: 0;
+  margin-right: nhsuk-spacing(4);
 }
 
 .nhsuk-date-input__label {
