--- a/packages/components/fieldset/_fieldset.scss
+++ b/packages/components/fieldset/_fieldset.scss
@@ -1,29 +1,39 @@
+/* ==========================================================================
+   COMPONENTS/ #FIELDSET
+   ========================================================================== */
+
+/**
+ * 1. Fix legend text wrapping in Edge and IE versions:
+ * 2. IE9-11 & Edge 12-13
+ * 3. and IE8-11
+ * 4. Hack to let legends or elements within legends have margins in webkit browsers.
+ * 5. When the legend contains an H1, we want the H1 to inherit all styles from
+ *    the legend. Effectively we want to be able to treat the heading as if it is
+ *    not there.
+ */
+
 .nhsuk-fieldset {
   @include clearfix;
 
+  border: 0;
   margin: 0;
   padding: 0;
-  border: 0;
 }
 
 .nhsuk-fieldset__legend {
   @include nhsuk-font(19);
-  color: $color_nhsuk-black;
-  // Fix legend text wrapping in Edge and IE
-  // 1. IE9-11 & Edge 12-13
-  // 2. IE8-11
-  box-sizing: border-box; // 1
-  display: table;         // 2
-  max-width: 100%;        // 1
-  margin-bottom: nhsuk-spacing(2);
-  padding: 0;
-  // Hack to let legends or elements within legends have margins in webkit browsers
-  overflow: hidden;
 
-  white-space: normal;    // 1
+  box-sizing: border-box; /* 1 */
+  color: $color_nhsuk-black;
+  display: table; /* 2 */
+  margin-bottom: nhsuk-spacing(2);
+  max-width: 100%; /* 1 */
+  overflow: hidden;
+  padding: 0;
+  white-space: normal;    /* 4 */
 }
 
-// Modifiers that make legends look more like their equivalent headings
+/* Heading modifiers */
 
 .nhsuk-fieldset__legend--xl {
   @include nhsuk-typography-responsive(48);
@@ -65,11 +75,8 @@
   @include nhsuk-responsive-margin(4, 'bottom');
 }
 
-// When the legend contains an H1, we want the H1 to inherit all styles from
-// the legend. Effectively we want to be able to treat the heading as if it is
-// not there.
-.nhsuk-fieldset__heading {
-  margin: 0;
+.nhsuk-fieldset__heading { /* 5 */
   font-size: inherit;
   font-weight: inherit;
+  margin: 0;
 }
