--- a/packages/components/input/_input.scss
+++ b/packages/components/input/_input.scss
@@ -1,31 +1,38 @@
+/* ==========================================================================
+   COMPONENTS/ #INPUT
+   ========================================================================== */
+
+/**
+ * 1. Disable inner shadow and remove rounded corners
+ * 2. setting any background-color makes text invisible when changing colours to dark
+ *    backgrounds in Firefox (https://bugzilla.mozilla.org/show_bug.cgi?id=1335476)
+ *    as background-color and color need to always be set together, color should
+ *    not be set either.
+ */
+
 .nhsuk-input {
   @include nhsuk-font(19);
   @include nhsuk-focusable;
 
+  -moz-appearance: none; /* 1 */
+  -webkit-appearance: none; /* 1 */
+  appearance: none; /* 1 */
+  border: $govuk-border-width-form-element solid $color_nhsuk-black; /* 2 */
+  border-radius: 0;
   box-sizing: border-box;
-  width: 100%;
   height: 40px;
   margin-top: 0;
-
   padding: nhsuk-spacing(1);
-  // setting any background-color makes text invisible when changing colours to dark backgrounds in Firefox (https://bugzilla.mozilla.org/show_bug.cgi?id=1335476)
-  // as background-color and color need to always be set together, color should not be set either
-  border: $govuk-border-width-form-element solid $color_nhsuk-black;
-  border-radius: 0;
-
-  // Disable inner shadow and remove rounded corners
-  -webkit-appearance: none;
-      -moz-appearance: none;
-          appearance: none;
+  width: 100%;
 }
 
 .nhsuk-input::-webkit-outer-spin-button,
 .nhsuk-input::-webkit-inner-spin-button {
-  margin: 0;
   -webkit-appearance: none;
+  margin: 0;
 }
 
-.nhsuk-input[type="number"] {
+.nhsuk-input[type="number"] { // sass-lint:disable-line quotes
   -moz-appearance: textfield;
 }
 
