--- a/packages/components/radios/_radios.scss
+++ b/packages/components/radios/_radios.scss
@@ -1,3 +1,12 @@
+/* ==========================================================================
+   COMPONENTS/ #RADIOS
+   ========================================================================== */
+
+/**
+ * 1. remove 300ms pause on mobile.
+ * 2. Fix bug in IE11 caused by transform rotate (-45deg).
+ */
+
 $govuk-radios-size: nhsuk-spacing(6);
 $govuk-radios-label-padding-left-right: nhsuk-spacing(3);
 // When the default focus width is used on a curved edge it looks visually smaller.
@@ -7,16 +16,12 @@ $govuk-radios-focus-width: $govuk-focus-width + 1px;
 .nhsuk-radios__item {
   @include nhsuk-font(19);
 
-  display: block;
-
-  position: relative;
-
-  min-height: $govuk-radios-size;
-
-  margin-bottom: nhsuk-spacing(2);
-  padding: 0 0 0 $govuk-radios-size;
-
   clear: left;
+  display: block;
+  margin-bottom: nhsuk-spacing(2);
+  min-height: $govuk-radios-size;
+  padding: 0 0 0 $govuk-radios-size;
+  position: relative;
 }
 
 .nhsuk-radios__item:last-child,
@@ -25,84 +30,80 @@ $govuk-radios-focus-width: $govuk-focus-width + 1px;
 }
 
 .nhsuk-radios__input {
-  position: absolute;
-
-  z-index: 1;
-  top: 0;
-  left: 0;
-
-  width: $govuk-radios-size;
-  height: $govuk-radios-size;
-
   cursor: pointer;
-
+  height: $govuk-radios-size;
+  left: 0;
   margin: 0;
   opacity: 0;
+  position: absolute;
+  top: 0;
+  width: $govuk-radios-size;
+  z-index: 1;
 }
 
 .nhsuk-radios__label {
+  -ms-touch-action: manipulation; /* 1 */
+  cursor: pointer;
   display: inline-block;
   margin-bottom: 0;
   padding: 8px $govuk-radios-label-padding-left-right nhsuk-spacing(1);
-  cursor: pointer;
-  // remove 300ms pause on mobile
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
+  touch-action: manipulation; /* 1 */
 }
 
 .nhsuk-radios__hint {
   display: block;
-  padding-right: $govuk-radios-label-padding-left-right;
   padding-left: $govuk-radios-label-padding-left-right;
+  padding-right: $govuk-radios-label-padding-left-right;
 }
 
 .nhsuk-radios__input + .nhsuk-radios__label::before {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  width: $govuk-radios-size;
-  height: $govuk-radios-size;
-
+  background: transparent;
   border: $govuk-border-width-form-element solid $color_nhsuk-black;
   border-radius: 50%;
-  background: transparent;
+  box-sizing: border-box;
+  content: '';
+  height: $govuk-radios-size;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: $govuk-radios-size;
 }
 
 .nhsuk-radios__input + .nhsuk-radios__label::after {
-  content: "";
-
-  position: absolute;
-  top: 10px;
-  left: 10px;
-
-  width: 0;
-  height: 0;
-
+  background: $color_nhsuk-black;
   border: 10px solid $color_nhsuk-black;
   border-radius: 50%;
+  content: '';
+  height: 0;
+  left: 10px;
   opacity: 0;
-  background: $color_nhsuk-black;
+  position: absolute;
+  top: 10px;
+  width: 0;
 }
 
-// Focused state
+/**
+ * Focused state
+ *
+ * 1. Since box-shadows are removed when users customise their colours
+ *    We set a transparent outline that is shown instead.
+ *    https://accessibility.blog.gov.uk/2017/03/27/how-users-change-colours-on-websites/
+ */
+
 .nhsuk-radios__input:focus + .nhsuk-radios__label::before {
-  // Since box-shadows are removed when users customise their colours
-  // We set a transparent outline that is shown instead.
-  // https://accessibility.blog.gov.uk/2017/03/27/how-users-change-colours-on-websites/
-  outline: $govuk-focus-width solid transparent;
-  outline-offset: $govuk-focus-width;
   box-shadow: 0 0 0 $govuk-radios-focus-width $nhsuk-focus-color;
+  outline: $govuk-focus-width solid transparent; /* 1 */
+  outline-offset: $govuk-focus-width;
 }
 
-// Selected state
+/* Selected state */
+
 .nhsuk-radios__input:checked + .nhsuk-radios__label::after {
   opacity: 1;
 }
 
-// Disabled state
+/* Disabled state */
+
 .nhsuk-radios__input:disabled,
 .nhsuk-radios__input:disabled + .nhsuk-radios__label {
   cursor: default;
@@ -112,35 +113,44 @@ $govuk-radios-focus-width: $govuk-focus-width + 1px;
   opacity: .5;
 }
 
-// Inline variant
+/*
+ * Inline variant
+ *
+ * 1. Prevent inline modifier being used with conditional reveals
+ */
+
 .nhsuk-radios--inline {
   @include mq ($from: tablet) {
     @include clearfix;
 
     .nhsuk-radios__item {
-      margin-right: nhsuk-spacing(4);
-      float: left;
       clear: none;
+      float: left;
+      margin-right: nhsuk-spacing(4);
     }
   }
 
-  // Prevent inline modifier being used with conditional reveals
-  &.nhsuk-radios--conditional {
+  &.nhsuk-radios--conditional { /* 1 */
     .nhsuk-radios__item {
-      margin-right: 0;
       float: none;
+      margin-right: 0;
     }
   }
 }
+
+/* Divider variant */
 
 .nhsuk-radios__divider {
   $govuk-divider-size: $govuk-radios-size !default;
   @include nhsuk-font(19);
+
   color: $color_nhsuk-black;
-  width: $govuk-divider-size;
   margin-bottom: nhsuk-spacing(2);
   text-align: center;
+  width: $govuk-divider-size;
 }
+
+/* Conditional */
 
 $conditional-border-width: $govuk-border-width-mobile;
 // Calculate the amount of padding needed to keep the border centered against the radios.
@@ -151,10 +161,10 @@ $conditional-margin-left: $conditional-border-padding;
 $conditional-padding-left: $conditional-border-padding + $govuk-radios-label-padding-left-right;
 
 .nhsuk-radios__conditional {
-  @include nhsuk-responsive-margin(4, "bottom");
+  @include nhsuk-responsive-margin(4, 'bottom');
+  border-left: $conditional-border-width solid $color_nhsuk-black;
   margin-left: $conditional-margin-left;
   padding-left: $conditional-padding-left;
-  border-left: $conditional-border-width solid $color_nhsuk-black;
 
   .js-enabled &--hidden {
     display: none;
