--- a/packages/components/select/_select.scss
+++ b/packages/components/select/_select.scss
@@ -1,19 +1,23 @@
+/* ==========================================================================
+   COMPONENTS/ #SELECT
+   ========================================================================== */
+
 .nhsuk-select {
   @include nhsuk-font(19);
   @include nhsuk-focusable;
 
-  box-sizing: border-box; // should this be global?
-  max-width: 100%;
+  border: $govuk-border-width-form-element solid $nhsuk-form-border-color;
+  box-sizing: border-box;
   height: 40px;
+  max-width: 100%;
   padding: nhsuk-spacing(1);
-  border: $govuk-border-width-form-element solid $color_nhsuk-black; // TODO: Colour alias?
 }
 
 .nhsuk-select option:active,
 .nhsuk-select option:checked,
 .nhsuk-select:focus::-ms-value {
-  color: $color_nhsuk-white;
   background-color: $color_nhsuk-blue;
+  color: $color_nhsuk-white;
 }
 
 .nhsuk-select--error {
