--- a/packages/components/textarea/_textarea.scss
+++ b/packages/components/textarea/_textarea.scss
@@ -1,20 +1,21 @@
+/* ==========================================================================
+   COMPONENTS/ #TEXTAREA
+   ========================================================================== */
+
 .nhsuk-textarea {
   @include nhsuk-font(19);
   @include nhsuk-focusable;
 
-  box-sizing: border-box; // should this be global?
-  display: block;
-  width: 100%;
-  min-height: 40px;
-  @include nhsuk-responsive-margin(6, "bottom");
-  padding: nhsuk-spacing(1);
-
-  resize: vertical;
-
-  border: $govuk-border-width-form-element solid $color_nhsuk-black; // TODO: Colour alias?
-  border-radius: 0;
-
   -webkit-appearance: none;
+  border: $govuk-border-width-form-element solid $nhsuk-form-border-color;
+  border-radius: 0;
+  box-sizing: border-box;
+  display: block;
+  min-height: 40px;
+  @include nhsuk-responsive-margin(6, 'bottom');
+  padding: nhsuk-spacing(1);
+  resize: vertical;
+  width: 100%;
 }
 
 .nhsuk-textarea--error {
