--- a/packages/core/objects/_form-group.scss
+++ b/packages/core/objects/_form-group.scss
@@ -1,5 +1,5 @@
 .nhsuk-form-group {
-  @include nhsuk-responsive-margin(6, "bottom");
+  @include nhsuk-responsive-margin(6, 'bottom');
 
   .nhsuk-form-group:last-of-type {
     margin-bottom: 0; // Remove margin from last item in nested groups
@@ -7,12 +7,12 @@
 }
 
 .nhsuk-form-group--error {
-  padding-left: nhsuk-spacing(3);
   border-left: $govuk-border-width-form-group-error solid $nhsuk-error-color;
+  padding-left: nhsuk-spacing(3);
 
   .nhsuk-form-group {
     // Reset error styles in nested form groups that might have error class
-    padding: 0;
     border: 0;
+    padding: 0;
   }
 }
