--- a/packages/core/settings/_globals.scss
+++ b/packages/core/settings/_globals.scss
@@ -72,3 +72,14 @@ $nhsuk-box-shadow-link: 4px !default;
 //
 
 $nhsuk-header-spacing: 20px;
+
+//
+// Form elements
+//
+
+$nhsuk-border-width-form-element: 2px !default;
+$nhsuk-border-width-form-element-error: 4px !default;
+$nhsuk-focus-width: 3px !default;
+$nhsuk-border-width: 5px !default;
+$nhsuk-border-width-mobile: 4px !default;
+$nhsuk-border-width-form-group-error: $nhsuk-border-width !default;
