--- a/packages/core/tools/_mixins.scss
+++ b/packages/core/tools/_mixins.scss
@@ -354,7 +354,7 @@
 
 @mixin nhsuk-focusable {
   &:focus {
-    outline: $govuk-focus-width solid $nhsuk-focus-color;
+    outline: $nhsuk-focus-width solid $nhsuk-focus-color;
     outline-offset: 0;
   }
 }
@@ -369,7 +369,7 @@
 @mixin nhsuk-focusable-fill {
   &:focus {
     background-color: $nhsuk-focus-color;
-    outline: $govuk-focus-width solid $nhsuk-focus-color;
+    outline: $nhsuk-focus-width solid $nhsuk-focus-color;
     outline-offset: 0;
   }
 }
