--- a/packages/components/radios/_radios.scss
+++ b/packages/components/radios/_radios.scss
@@ -7,11 +7,11 @@
  * 2. Fix bug in IE11 caused by transform rotate (-45deg).
  */
 
-$govuk-radios-size: nhsuk-spacing(6);
-$govuk-radios-label-padding-left-right: nhsuk-spacing(3);
+$nhsuk-radios-size: nhsuk-spacing(6);
+$nhsuk-radios-label-padding-left-right: nhsuk-spacing(3);
 // When the default focus width is used on a curved edge it looks visually smaller.
 // So for the circular radios we bump the default to make it look visually consistent.
-$govuk-radios-focus-width: $govuk-focus-width + 1px;
+$nhsuk-radios-focus-width: $nhsuk-focus-width + 1px;
 
 .nhsuk-radios__item {
   @include nhsuk-font(19);
@@ -19,8 +19,8 @@ $govuk-radios-focus-width: $govuk-focus-width + 1px;
   clear: left;
   display: block;
   margin-bottom: nhsuk-spacing(2);
-  min-height: $govuk-radios-size;
-  padding: 0 0 0 $govuk-radios-size;
+  min-height: $nhsuk-radios-size;
+  padding: 0 0 0 $nhsuk-radios-size;
   position: relative;
 }
 
@@ -31,13 +31,13 @@ $govuk-radios-focus-width: $govuk-focus-width + 1px;
 
 .nhsuk-radios__input {
   cursor: pointer;
-  height: $govuk-radios-size;
+  height: $nhsuk-radios-size;
   left: 0;
   margin: 0;
   opacity: 0;
   position: absolute;
   top: 0;
-  width: $govuk-radios-size;
+  width: $nhsuk-radios-size;
   z-index: 1;
 }
 
@@ -46,27 +46,27 @@ $govuk-radios-focus-width: $govuk-focus-width + 1px;
   cursor: pointer;
   display: inline-block;
   margin-bottom: 0;
-  padding: 8px $govuk-radios-label-padding-left-right nhsuk-spacing(1);
+  padding: 8px $nhsuk-radios-label-padding-left-right nhsuk-spacing(1);
   touch-action: manipulation; /* 1 */
 }
 
 .nhsuk-radios__hint {
   display: block;
-  padding-left: $govuk-radios-label-padding-left-right;
-  padding-right: $govuk-radios-label-padding-left-right;
+  padding-left: $nhsuk-radios-label-padding-left-right;
+  padding-right: $nhsuk-radios-label-padding-left-right;
 }
 
 .nhsuk-radios__input + .nhsuk-radios__label::before {
   background: transparent;
-  border: $govuk-border-width-form-element solid $color_nhsuk-black;
+  border: $nhsuk-border-width-form-element solid $color_nhsuk-black;
   border-radius: 50%;
   box-sizing: border-box;
   content: '';
-  height: $govuk-radios-size;
+  height: $nhsuk-radios-size;
   left: 0;
   position: absolute;
   top: 0;
-  width: $govuk-radios-size;
+  width: $nhsuk-radios-size;
 }
 
 .nhsuk-radios__input + .nhsuk-radios__label::after {
@@ -91,9 +91,9 @@ $govuk-radios-focus-width: $govuk-focus-width + 1px;
  */
 
 .nhsuk-radios__input:focus + .nhsuk-radios__label::before {
-  box-shadow: 0 0 0 $govuk-radios-focus-width $nhsuk-focus-color;
-  outline: $govuk-focus-width solid transparent; /* 1 */
-  outline-offset: $govuk-focus-width;
+  box-shadow: 0 0 0 $nhsuk-radios-focus-width $nhsuk-focus-color;
+  outline: $nhsuk-focus-width solid transparent; /* 1 */
+  outline-offset: $nhsuk-focus-width;
 }
 
 /* Selected state */
@@ -141,24 +141,24 @@ $govuk-radios-focus-width: $govuk-focus-width + 1px;
 /* Divider variant */
 
 .nhsuk-radios__divider {
-  $govuk-divider-size: $govuk-radios-size !default;
+  $nhsuk-divider-size: $nhsuk-radios-size !default;
   @include nhsuk-font(19);
 
   color: $color_nhsuk-black;
   margin-bottom: nhsuk-spacing(2);
   text-align: center;
-  width: $govuk-divider-size;
+  width: $nhsuk-divider-size;
 }
 
 /* Conditional */
 
-$conditional-border-width: $govuk-border-width-mobile;
+$conditional-border-width: $nhsuk-border-width-mobile;
 // Calculate the amount of padding needed to keep the border centered against the radios.
-$conditional-border-padding: ($govuk-radios-size / 2) - ($conditional-border-width / 2);
+$conditional-border-padding: ($nhsuk-radios-size / 2) - ($conditional-border-width / 2);
 // Move the border centered with the radios
 $conditional-margin-left: $conditional-border-padding;
 // Move the contents of the conditional inline with the label
-$conditional-padding-left: $conditional-border-padding + $govuk-radios-label-padding-left-right;
+$conditional-padding-left: $conditional-border-padding + $nhsuk-radios-label-padding-left-right;
 
 .nhsuk-radios__conditional {
   @include nhsuk-responsive-margin(4, 'bottom');
